# webpy

Project/django_project/: manage.py  pyproject.toml
Project/django_project/carts/: models.py  tests.py  urls.py  views.py
Project/django_project/carts/migrations/: 0001_initial.py  0002_alter_cartitem_quantity.py
Project/django_project/carts/templates/carts/: cart_detail.html
Project/django_project/django_project/: settings.py  urls.py
Project/django_project/main/templates/main/: home.html
Project/django_project/products/: forms.py  models.py  tests.py  urls.py  views.py
Project/django_project/products/migrations/: 0001_initial.py
Project/django_project/products/templates/products/: product_confirm_delete.html  product_create.html  product_detail.html  product_list.html  product_update.html
Project/django_project/reviews/: forms.py  models.py  tests.py  urls.py  views.py
Project/django_project/reviews/migrations/: 0001_initial.py  0002_remove_comment_helpful_remove_comment_inappropriate_and_more.py  0003_comment_is_hidden.py
Project/django_project/reviews/templates/reviews/: comment_confirm_delete.html  comment_detail.html  comment_update.html  rating_confirm_delete.html  rating_detail.html  rating_update.html
Project/django_project/templates/: base.html
Project/django_project/users/: forms.py  models.py  tests.py  urls.py  views.py
Project/django_project/users/migrations/: 0001_initial.py  0002_create_service_worker.py
Project/django_project/users/templates/users/: edit_profile.html  login.html  register.html  view_profile.html
