[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Kelvin <kelvinkuang11@googlemail.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
pillow = "^10.0.0"
django-dotenv = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
